--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1218,8 +1218,8 @@
                 // "--buildinginput",
                 // "--segmentationinput",
                 // "--useposembedding",
-                "--weightdecay_unet", "0.00001",
-                "--weightdecay_unet", "0.00001",
+                "--weightdecay_unet", "0.0001",
+                "--weightdecay_unet", "0.0001",
                 // "--sentinelbuildings", 
                 "--pretrained", 
             ]
@@ -1582,7 +1582,7 @@
                 "--buildinginput",
                 "--useposembedding",
                 // "--sentinelbuildings",
-                "--empty_eps", "0.01",
+                // "--empty_eps", "0.01",
                 "-dw","2",
                 "-S2",
                 "-NIR",
@@ -1611,7 +1611,7 @@
                 // "--buildinginput",
                 // "--useposembedding",
                 "--sentinelbuildings",
-                "--empty_eps", "0.01",
+                "--empty_eps", "0.00",
                 "-dw","2",
                 "-S2",
                 "-NIR",
@@ -1619,37 +1619,56 @@
                 "-f", "4",
                 "-rse",
                 "-treg", "rwa",
-                // "--fourseasons",
-                "--train_level", "coarse",
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1855_904/last_model.pth",
-                // "--resume", //OLD
-                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_466/last_model.pth", 
-                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_431/last_model.pth", 
-                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_591_472/last_model.pth", 
-                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_595_898/last_model.pth", 
-                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_589_875/last_model.pth",
-                // "--resume", //OLD
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_597_86/last_model.pth", 
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_624_161/last_model.pth", 
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_624_231/last_model.pth", 
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_623_344/last_model.pth", 
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_622_162/last_model.pth", 
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_629_946/last_model.pth", 
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_626_996/last_model.pth", 
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_626_512/last_model.pth", 
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_626_995/last_model.pth", 
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_630_237/last_model.pth", 
+                "--fourseasons",
+                "--num_workers", "8",
+                "--train_level", "coarse", 
                 "--resume",
                     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_696_451/last_model.pth",
                     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_693_727/last_model.pth",
                     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_693_194/last_model.pth",
                     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_693_526/last_model.pth",
                     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_692_518/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_690_622/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_689_611/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_686_402/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_681_376/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_681_24/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_690_622/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_689_611/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_686_402/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_681_376/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_681_24/last_model.pth",
+                // "--resume", //no occ, no pretraining
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_720_945/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_719_79/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_718_700/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_723_411/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_724_744/last_model.pth",
+                // "--resume", //no occ
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_708_485/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_708_693/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_708_687/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_714_433/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_717_305/last_model.pth",
+                // "--resume", //no pretraining
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_713_890/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_711_20/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_711_102/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_715_887/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_716_796/last_model.pth",
+                // "--resume", // Google Buildings
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_789_164/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_788_330/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_786_552/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_784_473/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_784_971/last_model.pth",
+                // "--resume", //S2
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_758_191/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_758_186/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_759_978/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_769_684/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler//last_model.pth",
+                // "--resume", //S1
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_768_575/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_764_634/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_765_645/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_764_627/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_764_964/last_model.pth",
             ]
         },
         {
@@ -1667,7 +1686,7 @@
                 "--buildinginput",
                 "--useposembedding",
                 "--sentinelbuildings",
-                "--empty_eps", "0.01",
+                // "--empty_eps", "0.01",
                 "-dw","2",
                 "-S2",
                 "-NIR",
@@ -1695,22 +1714,58 @@
                 // "--buildinginput",
                 // "--useposembedding",
                 "--sentinelbuildings",
-                "--empty_eps", "0.01",
+                // "--empty_eps", "0.01",
                 "-dw","2",
-                "-S2",
-                "-NIR",
+                // "-S2",
+                // "-NIR",
                 "-S1",
                 "-f", "4",
                 "-rse",
-                // "--fourseasons",
+                "--fourseasons",
                 "-treg", "pricp2", 
                 "--train_level", "coarse", 
-                "--resume", //full model
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_708_758/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_709_394/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_708_44/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_711_205/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_724_756/last_model.pth",
+                // "--resume", //full model
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_708_758/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_709_394/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_708_44/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_711_205/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_724_756/last_model.pth",
+                // "--resume", //no pretraining
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_727_778/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_727_33/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_726_100/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_725_187/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_729_202/last_model.pth",
+                // "--resume", //no occ
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_730_666/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_731_191/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_731_203/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_733_104/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_734_86/last_model.pth",
+                // "--resume", //no occ, no pretraining 
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_707_30/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_706_382/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_705_630/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_736_861/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_735_716/last_model.pth",
+                // "--resume", //no occ, no pretraining 
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_707_30/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_706_382/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_705_630/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_736_861/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_735_716/last_model.pth",
+                "--resume", //S1
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_759_610/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_758_72/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_758_71/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_771_172/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_772_976/last_model.pth",
+                // "--resume", //S2
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_779_811/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_779_964/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_775_37/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_774_886/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_773_766/last_model.pth",
             ]
         },
         {
@@ -1724,11 +1779,8 @@
                 "--model", "POMELO_module",
                 "--feature_extractor", "DDA",
                 "--head", "v3",
-                "--occupancymodel",
-                "--buildinginput",
-                // "--useposembedding",
-                "--sentinelbuildings",
-                "--empty_eps", "0.01",
+                // "--occupancymodel", 
+                "--sentinelbuildings", 
                 "-dw","2",
                 "-S2",
                 "-NIR",
@@ -1737,11 +1789,26 @@
                 "-rse",
                 "-treg", "che", 
                 "--train_level", "coarse4", 
-                // "--fourseasons",
-                "--empty_eps", "0.01",
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1855_904/last_model.pth",
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1891_431/last_model.pth"
-                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_613_488/last_model.pth"
+                "--fourseasons", 
+                // "--resume", // ALL
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_721_124/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_721_84/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_722_54/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_753_190/last_model.pth",
+                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_776_111/last_model.pth",
+                // "--resume", // NO OCC
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_719_46/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_718_321/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_720_740/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_722_243/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_722_668/last_model.pth",
+                "--resume", // NO OCC, no pretraining
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_777_539/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_757_798/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_756_940/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_752_244/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_753_692/last_model.pth",
+
             ]
         },
         {
@@ -1756,8 +1823,8 @@
                 "--feature_extractor", "DDA",
                 "--head", "v3",
                 "--occupancymodel",
-                "--buildinginput",
-                "--useposembedding",
+                // "--buildinginput",
+                // "--useposembedding",
                 "--sentinelbuildings",
                 "-dw","2",
                 "-S2",
@@ -1768,10 +1835,10 @@
                 "-treg", "uga", 
                 "--train_level", "coarse",
                 // "--fourseasons",
-                "--empty_eps", "0.01",
+                // "--empty_eps", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1855_904/last_model.pth",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1891_431/last_model.pth"
-                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_2119_928/last_model.pth"
+                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_2327_727/last_model.pth"
             ]
         },
         {
