--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -767,8 +767,7 @@
             "justMyCode": false,
             "args": [
                 "-o",
-                "-s",
-                // "--max_samples", "200",
+                "-s", 
                 "-e",   "100",
                 "-b", "16",
                 "-lr", "1e-4", 
@@ -1615,19 +1614,19 @@
                 "-dw","2",
                 "-S2",
                 "-NIR",
-                "-S1",
+                // "-S1",
                 "-f", "4",
                 "-rse",
                 "-treg", "rwa",
                 "--fourseasons",
                 "--num_workers", "8",
                 "--train_level", "coarse", 
-                "--resume",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_696_451/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_693_727/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_693_194/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_693_526/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_692_518/last_model.pth",
+                // "--resume",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_696_451/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_693_727/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_693_194/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_693_526/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_692_518/last_model.pth",
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_690_622/last_model.pth",
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_689_611/last_model.pth",
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_686_402/last_model.pth",
@@ -1657,12 +1656,12 @@
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_786_552/last_model.pth",
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_784_473/last_model.pth",
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_784_971/last_model.pth",
-                // "--resume", //S2
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_758_191/last_model.pth",
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_758_186/last_model.pth",
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_759_978/last_model.pth",
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_769_684/last_model.pth",
-                    // "/scratch2/metzgern/HAC/POMELOv2_results/euler//last_model.pth",
+                "--resume", //S2
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_758_191/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_758_186/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_759_978/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_769_684/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_805_491/last_model.pth",
                 // "--resume", //S1
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_768_575/last_model.pth",
                     // "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_764_634/last_model.pth",
@@ -1779,12 +1778,12 @@
                 "--model", "POMELO_module",
                 "--feature_extractor", "DDA",
                 "--head", "v3",
-                // "--occupancymodel", 
-                "--sentinelbuildings", 
+                "--occupancymodel", 
+                // "--sentinelbuildings", 
                 "-dw","2",
                 "-S2",
                 "-NIR",
-                "-S1",
+                // "-S1",
                 "-f", "4",
                 "-rse",
                 "-treg", "che", 
@@ -1802,14 +1801,31 @@
                 //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_720_740/last_model.pth",
                 //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_722_243/last_model.pth",
                 //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_722_668/last_model.pth",
-                "--resume", // NO OCC, no pretraining
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_777_539/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_757_798/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_756_940/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_752_244/last_model.pth",
-                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_753_692/last_model.pth",
-
-            ]
+                // "--resume", // NO OCC, no pretraining
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_777_539/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_757_798/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_756_940/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_752_244/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_753_692/last_model.pth",
+                // "--resume", // TLM
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_778_673/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_782_234/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_783_38/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_791_926/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_792_32/last_model.pth",
+                "--resume", // S2
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_819_97/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_818_860/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_804_716/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_803_966/last_model.pth",
+                    "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_796_781/last_model.pth",
+                // "--resume", //S1
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_820_142/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_821_509/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler/experiment_822_203/last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler//last_model.pth",
+                //     "/scratch2/metzgern/HAC/POMELOv2_results/euler//last_model.pth",
+                ]
         },
         {
             "name": "eval, UGA",
